[gd_scene load_steps=10 format=3 uid="uid://dvvbeso36s0o4"]

[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_du782"]
[ext_resource type="PackedScene" uid="uid://beaj3udobexnc" path="res://scenes/menu/option_menu/simple_option_menu.tscn" id="2_wyugc"]
[ext_resource type="PackedScene" uid="uid://cv1jmy5vty2xe" path="res://scenes/bg_canvas_layer.tscn" id="3_6qppe"]
[ext_resource type="Script" path="res://script/ui_sound.gd" id="3_8hidd"]
[ext_resource type="Script" path="res://script/theme_label.gd" id="5_cxdd7"]
[ext_resource type="Texture2D" uid="uid://xs7qrvvf27b8" path="res://assets/img/title3.png" id="5_tjsu4"]
[ext_resource type="Script" path="res://script/theme_button.gd" id="6_tsq01"]
[ext_resource type="Texture2D" uid="uid://bcq0hgbdpgdfb" path="res://assets/img/icon/icons8-sun-96.png" id="9_evyek"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i85jh"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_du782")
game_scene_path = "res://scenes/game/game_ui.tscn"
option_packed_scene = ExtResource("2_wyugc")

[node name="BGCanvasLayer" parent="." instance=ExtResource("3_6qppe")]

[node name="UISound" type="Node" parent="."]
script = ExtResource("3_8hidd")
root_path = NodePath("..")

[node name="MenuContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -44.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TitleMarginContainer" type="MarginContainer" parent="MenuContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/VBoxContainer/TitleMarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MenuContainer/VBoxContainer/TitleMarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="TitleTextureRect" type="TextureRect" parent="MenuContainer/VBoxContainer/TitleMarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1440, 300)
layout_mode = 2
texture = ExtResource("5_tjsu4")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer/VBoxContainer/TitleMarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="MenuContainer/VBoxContainer/TitleMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.694118, 0.168627, 1)
theme_override_colors/font_outline_color = Color(0.996078, 0.631373, 0.0117647, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 192
text = "Light"
horizontal_alignment = 1
uppercase = true

[node name="Title2" type="Label" parent="MenuContainer/VBoxContainer/TitleMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0235294, 0.643137, 0.921569, 1)
theme_override_colors/font_outline_color = Color(0.0196078, 0.529412, 0.745098, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 192
text = " Cells"
horizontal_alignment = 1
uppercase = true

[node name="Subtitle" type="Label" parent="MenuContainer/VBoxContainer/TitleMarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 96
horizontal_alignment = 1

[node name="Control2" type="Control" parent="MenuContainer/VBoxContainer/TitleMarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="MenuMargin" type="MarginContainer" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/VBoxContainer/MenuMargin"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 128

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Slot1Button" type="Button" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer3/Slot3Button")
focus_neighbor_top = NodePath("../../../../../../../LightModeButton")
focus_neighbor_right = NodePath("../../VBoxContainer2/Slot2Button")
focus_neighbor_bottom = NodePath("../../../OptionButton")
theme_override_font_sizes/font_size = 56
text = "1
"
icon_alignment = 1
script = ExtResource("6_tsq01")

[node name="Slot1FinishedLabel" type="Label" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0 %"
horizontal_alignment = 1
script = ExtResource("5_cxdd7")

[node name="VBoxContainer2" type="VBoxContainer" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Slot2Button" type="Button" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer/Slot1Button")
focus_neighbor_top = NodePath("../../../../../../../LightModeButton")
focus_neighbor_right = NodePath("../../VBoxContainer3/Slot3Button")
focus_neighbor_bottom = NodePath("../../../OptionButton")
theme_override_font_sizes/font_size = 56
text = "2"
icon_alignment = 1
script = ExtResource("6_tsq01")

[node name="Slot2FinishedLabel" type="Label" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0%"
horizontal_alignment = 1
script = ExtResource("5_cxdd7")

[node name="VBoxContainer3" type="VBoxContainer" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Slot3Button" type="Button" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer2/Slot2Button")
focus_neighbor_top = NodePath("../../../../../../../LightModeButton")
focus_neighbor_right = NodePath("../../VBoxContainer/Slot1Button")
focus_neighbor_bottom = NodePath("../../../OptionButton")
theme_override_font_sizes/font_size = 56
text = "3"
icon_alignment = 1
script = ExtResource("6_tsq01")

[node name="Slot3FinishedLabel" type="Label" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0%"
horizontal_alignment = 1
script = ExtResource("5_cxdd7")

[node name="ContinueButton" type="Button" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(384, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_i85jh")
text = "Continue"
script = ExtResource("6_tsq01")

[node name="NewGameButton" type="Button" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(384, 96)
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_i85jh")
text = "New Game"
script = ExtResource("6_tsq01")

[node name="Control3" type="Control" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="OptionButton" type="Button" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(384, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_i85jh")
text = "Options"
script = ExtResource("6_tsq01")

[node name="ExitButton" type="Button" parent="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(384, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_i85jh")
text = "Exit"
script = ExtResource("6_tsq01")

[node name="OptionContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionVbox" type="VBoxContainer" parent="OptionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="OptionContainer/OptionVbox"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="TitleLabel" type="Label" parent="OptionContainer/OptionVbox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 128
text = "Options"
script = ExtResource("5_cxdd7")

[node name="MarginContainer2" type="MarginContainer" parent="OptionContainer/OptionVbox"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="BackButton" type="Button" parent="OptionContainer/OptionVbox/MarginContainer2"]
custom_minimum_size = Vector2(384, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 48
text = "Back"
script = ExtResource("6_tsq01")

[node name="VersionLabelContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VersionLabel" type="Label" parent="VersionLabelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "v unkonw"
script = ExtResource("5_cxdd7")

[node name="LightModeButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 0
offset_left = 1792.0
offset_top = 32.0
offset_right = 1888.0
offset_bottom = 128.0
size_flags_horizontal = 5
size_flags_vertical = 5
icon = ExtResource("9_evyek")
icon_alignment = 1
expand_icon = true
script = ExtResource("6_tsq01")

[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/HBoxContainer/VBoxContainer/Slot1Button" to="." method="_on_slot_1_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/HBoxContainer/VBoxContainer2/Slot2Button" to="." method="_on_slot_2_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/HBoxContainer/VBoxContainer3/Slot3Button" to="." method="_on_slot_3_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuMargin/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="OptionContainer/OptionVbox/MarginContainer2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LightModeButton" to="." method="_on_light_mode_button_pressed"]
